infrastructure/kubernetes/tenants/pod-gateway/pod-gateway-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pod-gateway
  namespace: pod-gateway
  labels:
    app: pod-gateway
spec:
  selector:
    app: pod-gateway
  ports:
    - name: http
      port: 80
      targetPort: http
